Bug 89129 - EDITING: crash when defining a specific relationship
Summary: EDITING: crash when defining a specific relationship
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:4.5.0 target:4.4.1 target:4.3.7
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-04 20:53 UTC by Julien Nabet
Modified: 2015-02-06 07:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
odb test file (11.17 KB, application/vnd.oasis.opendocument.database)
2015-02-04 20:53 UTC, Julien Nabet
Details
console bt with master sources (6.61 KB, text/plain)
2015-02-04 20:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-02-04 20:53:47 UTC
Created attachment 113131 [details]
odb test file

On pc Debian x86-64 with master sources updated today, I got a crash when defining a specific relationship.

Steps to reproduce:
- open database attached (hsqldb embedded)
- Tools/Relationships
- Increase size of tables "Assets" and "Orders"
- Select StatusID in "Assets" and try to make a relation with "CustomerID" in "Orders"
(of course it's nonsense but it's just to have the crash)

expected: no crash of course
Comment 1 Julien Nabet 2015-02-04 20:54:57 UTC
Created attachment 113132 [details]
console bt with master sources
Comment 2 Julien Nabet 2015-02-04 20:55:09 UTC
bt=>new
Comment 3 Julien Nabet 2015-02-04 21:04:24 UTC
Lionel: thought you might be interested in this one.
I submitted a patch to review (see https://gerrit.libreoffice.org/#/c/14325/1)
Comment 4 Commit Notification 2015-02-05 22:28:44 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=30f6ec7cfdf63cea265148bbe3a07d8df34e96d5

Resolves tdf#89129: crash when defining a specific relationship

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2015-02-06 06:36:33 UTC
4.4: https://gerrit.libreoffice.org/14348
Comment 6 Commit Notification 2015-02-06 06:44:44 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9bac857d7e3e783878422618ac03ff42d68fc27&h=libreoffice-4-4

Resolves tdf#89129: crash when defining a specific relationship

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2015-02-06 07:13:34 UTC
and finally for 4.3 branch: https://gerrit.libreoffice.org/14349
Comment 8 Commit Notification 2015-02-06 07:48:37 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cc652828ec26e7c36eee217437baa9e1018d9b30&h=libreoffice-4-3

Resolves tdf#89129: crash when defining a specific relationship

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.